# asyncio-subprocess-ffmpeg

./: .appveyor.yml  .flake8  .mypy.ini  .travis.yml  LICENSE  MANIFEST.in  README.md  demo.py  ffmpeg.py  ffplay.py  ffprobe.py  ffprobe_sync.py  meson.build  play_async.py  play_coroutine.py  play_queue.py  play_sync.py  play_thread.py  play_threadpool.f90  play_threadpool.py  probe_async.py  probe_coroutine.py  probe_sync.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
asyncioffmpeg/: ffplay.py  ffplay_sync.py  ffprobe.py  ffprobe_sync.py  runner.py
examples/: benchmark.py  demo.py  play_coarray.f90  play_coroutine.py  play_thread.py  play_thread_queue.py  probe_coroutine.py  probe_sync.py
src/asyncioffmpeg/: __init__.py  ffplay.py  ffprobe.py  runner.py
src/asyncioffmpeg/tests/: conftest.py  test_ffprobe.py
tests/: conftest.py  test_ffprobe.py
