[metadata]
name = asyncioffmpeg
version = 1.0.1
author = Michael Hirsch, Ph.D.
author_email = scivision@noreply.users.github.com
url = https://github.com/ec500-software-engineering/asyncio-subprocess-ffmpeg
description = Play and convert media files asynchronously with FFmpeg
keywords =
  ffmpeg
  asyncio
  concurrent
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Framework :: AsyncIO
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Multimedia :: Video :: Conversion
  Topic :: System :: Networking
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
setup_requires =
  setuptools >= 38.6
  pip >= 10
packages = find:
scripts =
  demo.py
  play_sync.py
  probe_coroutine.py
  play_coroutine.py
  play_threadpool.py
  probe_sync.py
install_requires =


[options.extras_require]
tests =
  pytest >= 3.9
  pytest-asyncio
  flake8
  mypy
